[package]
name = "brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#hashbrown = "0.14.5"
parse = { path = './src/parse' }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "small_parse"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

